Tạo trang chi tiết sản phẩm

--- a/OnlineShop/OnlineShop/Views/Home/Index.cshtml
+++ b/OnlineShop/OnlineShop/Views/Home/Index.cshtml
@@ -11,7 +11,9 @@
 {
     <div class="header_slide">
         <div class="header_bottom_left">
+            <div class="categories">
             @{ Html.RenderAction("ProductCategory", "Product");}
+            </div>
         </div>
         <div class="header_bottom_right">
             <div class="slider">
