--- a/OnlineShop/OnlineShop/Views/Shared/_Layout.cshtml
+++ b/OnlineShop/OnlineShop/Views/Shared/_Layout.cshtml
@@ -10,9 +10,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <title>Free Home Shoppe Website Template | Home :: w3layouts</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link href="~/assets/client/css/style.css" rel="stylesheet" type="text/css" media="all" />
-    <link href="~/assets/client/css/slider.css" rel="stylesheet" type="text/css" media="all" />
-    <script type="text/javascript" src="/assets/client/js/jquery-1.7.2.min.js"></script>
+    <link href="/assets/client/css/bootstrap.css" rel="stylesheet" />
+    <link href="/assets/client/css/bootstrap-theme.css" rel="stylesheet" />
+    <link href="/assets/client/css/style.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="/assets/client/css/slider.css" rel="stylesheet" type="text/css" media="all" />
+    <script src="/assets/client/js/jquery-3.2.1.min.js"></script>
+    <script src="/assets/client/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/assets/client/js/move-top.js"></script>
     <script type="text/javascript" src="/assets/client/js/easing.js"></script>
     <script type="text/javascript" src="/assets/client/js/startstop-slider.js"></script>
