--- a/OnlineShop/OnlineShop/Areas/Admin/Views/Shared/_Layouts.cshtml
+++ b/OnlineShop/OnlineShop/Areas/Admin/Views/Shared/_Layouts.cshtml
@@ -9,6 +9,7 @@
     <title>SB Admin 2 - Bootstrap Admin Theme</title>
     <!-- Bootstrap Core CSS -->
     <link href="/assets/admin/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/assets/client/css/font-awesome.min.css" rel="stylesheet" />
     <!-- MetisMenu CSS -->
     <link href="/assets/admin/bower_components/metisMenu/dist/metisMenu.min.css" rel="stylesheet">
     <!-- Custom CSS -->
