--- a/OnlineShop/OnlineShop/Views/Shared/_Layout.cshtml
+++ b/OnlineShop/OnlineShop/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href="/assets/client/css/bootstrap.css" rel="stylesheet" />
+    <link href="/assets/client/css/font-awesome.min.css" rel="stylesheet" />
     <link href="/assets/client/css/bootstrap-theme.css" rel="stylesheet" />
     <link href="/assets/client/css/style.css" rel="stylesheet" type="text/css" media="all" />
     <link href="/assets/client/css/slider.css" rel="stylesheet" type="text/css" media="all" />
