--- a/OnlineShop/OnlineShop/Areas/Admin/Views/User/Index.cshtml
+++ b/OnlineShop/OnlineShop/Areas/Admin/Views/User/Index.cshtml
@@ -54,7 +54,7 @@
                                         <td>@item.UserName</td>
                                         <td>@item.Name</td>
                                         <td>@item.Email</td>
-                                        <td><a href="#" class="btn-active" data-Id ="@item.ID">@(item.Status ? "Kích hoạt" : "Khóa")</a></td>
+                                        <td><a href="#" class="btn-active" data-Id ="@item.ID">@Html.Raw(item.Status ? "<strong>Kích hoạt</strong>" : "Khóa")</a></td>
                                         <td>
                                             <a href="/Admin/User/Edit/@item.ID"> Sửa </a>
                                             |
