--- a/OnlineShop/OnlineShop/Views/Home/Index.cshtml
+++ b/OnlineShop/OnlineShop/Views/Home/Index.cshtml
@@ -66,7 +66,7 @@
                         <p><span class="rupees">@(item.Price.HasValue?item.Price.Value.ToString("N0"):"Liên hệ")</span></p>
                     </div>
                     <div class="add-cart">
-                        <h4><a href="@url">Thêm vào giỏ</a></h4>
+                        <h4><a href="/them-gio-hang?productId=@item.ID&quantity=1 ">Thêm vào giỏ</a></h4>
                     </div>
                     <div class="clear"></div>
                 </div>
@@ -95,7 +95,7 @@
                     <p><span class="rupees">@(item.Price.HasValue ? item.Price.Value.ToString("N0") : "Liên hệ")</span></p>
                 </div>
                 <div class="add-cart">
-                    <h4><a href="@url">Thêm vào giỏ</a></h4>
+                    <h4><a href="/them-gio-hang?productId=@item.ID&quantity=1 ">Thêm vào giỏ</a></h4>
                 </div>
                 <div class="clear"></div>
             </div>
